Basic auth features (#5)
* Refactor file structure

* Add AuthContext.Provider

* Add login forms

* Hook up login API (auth token)

* Add support for new api (with token)

* Fix formatting

* Add logout  + navbar style

* Add Signup

* Use axios default base url instead of proxy

* Resolve warnings

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -30,4 +30,9 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+button.nav-link {
+  border: none;
+  background-color: inherit;
 }
